--- a/index.html
+++ b/index.html
@@ -107,8 +107,43 @@
         </section>
 
         <!-- "meet the trainers" section -->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title secondary-border">Meet The Trainers</h2>
+            <!-- first trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, ab eos? Obcaecati similique sed totam deleniti ipsam unde corrupti facilis natus velit officiis veritatis fugit fuga, adipisci doloremque est. Ea?
+                    </p>
+                </div>
+            </article>
+            <!-- seocond trainer bio -->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id esse vitae magni blanditiis quidem tenetur unde, voluptatem fuga, qui provident quam autem earum beatae asperiores hic impedit quibusdam facere quasi!
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after an intense workout" />
+            </article>
+            <!-- third trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, ab eos? Obcaecati similique sed totam deleniti ipsam unde corrupti facilis natus velit officiis veritatis fugit fuga, adipisci doloremque est. Ea?
+                    </p>
+                </div>
+            </article>
+
+
         </section>
 
         <!-- "reach out" section -->
