--- a/index.html
+++ b/index.html
@@ -149,6 +149,30 @@
         <!-- "reach out" section -->
         <section>
             <h2>Reach Out</h2>
+            <div class="contact.info">
+                <iframe src=https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2932.6350434263345!2d-83.30696258537549!3d42.690272522177814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882495bcd7e06913%3A0x2817988e2a05db37!2s3317%20Antigua%20Dr%2C%20Auburn%20Hills%2C%20MI%2048326!5e0!3m2!1sen!2sus!4v1643836263936!5m2!1sen!2sus"
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen=""
+                loading="lazy">
+                </iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                      Any questions or concerns before signing up?
+                      <br />
+                      Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br/>
+                        Some Town, Ca <br/>
+                        12345<br />
+                        P: 555.RUN.BUDZ (555.786.2839)<br/>
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
+            </div>
         </section>
 
         <!-- footer -->
