--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
                     </button>
                 </form>
             </div>
+
+            <div class="hero-cta">
+                <h2>Start Building Habits</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quisquam quibusdam nobis ratione quasi magni impedit aperiam a voluptatum reiciendis, quos sint voluptatem ipsam rerum qui facere eos? Dolores, nesciunt!
+                </p>
+
+            </div>
         </section>
         <!-- end hero -->
 
