--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Run Buddy</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
@@ -236,13 +237,12 @@
                     </form>
                 </div>
 
-                
-                    <iframe 
+                <iframe 
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.1079747227936!2d-120.42364418397035!3d37.92790791110593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c49129b6ac57%3A0xb56c7eb95a2cd8bd!2sMain%20St%2C%20California%2095327!5e0!3m2!1sen!2sus!4v1616426329495!5m2!1sen!2sus"
                         style="border:0;" 
                         allowfullscreen=""
                         frameborder="0">
-                    </iframe>
+                </iframe>
             </div>
             
         </section>
